# foodfy

./: .gitignore  .pre-commit-config.yaml  .secrets-example.toml  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  settings.toml
.github/ISSUE_TEMPLATE/: user-stories.md
.github/workflows/: python-app.yml
app/: __init__.py  app.py
app/controllers/admin/: auth.py  chef.py  file.py  form.py  recipe.py  user.py
app/dao/: chef.py  file.py  recipe.py  user.py
app/db/: models.py
app/ext/: comand.py  config.py  database.py  migrate.py  session.py  swagger.py
app/ext/api/: __init__.py  decorators.py  exceptions.py
app/resources/admin/: __init__.py  auth.py  chef.py  main.py  recipe.py  recipes.py  user.py
app/resources/site/: __init__.py  main.py  site.py
app/static/css/: admin-site.css  main.css
app/static/js/: script.js
app/templates/admin/: base.html  (+1 more)
docs/: requirements-system.md
migrations/versions/: 046341c7d60c_audit_log_table.py  23225f18738c_user_model.py  517335c27c6c_create_table_recipe_and_recipe_files.py  5d97a698bd7f_adicionando_campos_de_data_na_tabela_de_.py  7ef62646b31c_create_table_recipe_and_recipe_files.py  918070daea7e_initil_config.py  9bdb02390de6_create_table_recipe_files.py  abc07b126068_adicionando_banco_de_dados.py  acc4ac2a78bc_confirmed_user_column.py  d606f6df2880_update_nullable_column.py  f711a2271743_generate_session_table.py  fa3c503cba50_adicionando_campos_nulos_e_default.py
test/: conftest.py  test_app.py
test/auth/: test_login.py  test_recovery_password.py
test/chef/: test_edit_chef.py  test_list_chefs.py  test_register_chef.py  test_view_chef.py
test/recipe/: test_edit_recipe.py  test_list_recipe.py  test_register_recipe.py  test_view_recipe.py
test/user/: test_list_users.py  test_register_user.py  test_user_profile.py
(+51 files in other folders)
