[tool.poetry]
name = "foodfy"
version = "0.1.0"
description = "recipe MVC application made in python"
authors = ["Fredson Chaves <fredsonchaves07@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
dynaconf = "^3.1.4"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.0.1"
PyJWT = "^2.1.0"
Flask-Mail = "^0.9.1"
psycopg2-binary = "^2.9.1"
Flask-Session = "^0.4.0"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
pep8 = "^1.7.1"
autopep8 = "^1.5.7"
flake8 = "^3.9.2"
pylint = "^2.9.3"
pytest = "^6.2.4"
pytest-flask = "^1.2.0"
pre-commit = "^2.13.0"
ipython = "^7.25.0"
python-dotenv = "^0.18.0"
flask-shell-ipython = "^0.4.1"
pytest-cov = "^2.12.1"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.vscode
  | migrations
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
